# glsprite

./: .gitmodules  CMakeLists.txt  COPYING  Makefile  fs.glsl  glsprite.c  glsprite.h  glsprite.hh  glutil.h  sdl-main.c  vs.glsl
sdl-main/: Makefile  glutil.c  glutil.h  sdl-main.c  sdl-mainpp.cc
shader/: fs.glsl  vs.glsl
